--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@
                     </div>
                     <div class="custom-product-info">
                         <h4><a href="#">Steering Knuckle</a></h4>
+                         <p>A key suspension part connecting the wheel hub and control arms, offering precise steering.</p>
                     </div>
                       <div class="hero-btn wow " data-wow-delay="0.4s">
                         <a href="#" class="btn-default"><span>See More</span></a>
@@ -389,6 +390,7 @@
                     </div>
                     <div class="custom-product-info">
                         <h4><a href="#">Steering Knuckle</a></h4>
+                           <p>A key suspension part connecting the wheel hub and control arms, offering precise steering.</p>
                     </div>
                      <div class="hero-btn wow " data-wow-delay="0.4s">
                         <a href="#" class="btn-default"><span>See More</span></a>
@@ -407,6 +409,7 @@
                     </div>
                     <div class="custom-product-info">
                         <h4><a href="#">Crankshaft Rear Oil <br> Seal Housing</a></h4>
+                        <p>Protects the rear oil seal of the crankshaft, ensuring oil retention and minimizing leakage.</p>
                     </div>
                      <div class="hero-btn wow " data-wow-delay="0.4s">
                         <a href="#" class="btn-default"><span>See More</span></a>
@@ -425,6 +428,7 @@
                     </div>
                     <div class="custom-product-info">
                         <h4><a href="#">Gland Flange</a></h4>
+                        <p>Used to secure gland packing in valve or pump assemblies, ensuring leak-proof sealing.</p>
                     </div>
                      <div class="hero-btn wow " data-wow-delay="0.4s">
                         <a href="#" class="btn-default"><span>See More</span></a>
@@ -442,7 +446,8 @@
                         </a>
                     </div>
                     <div class="custom-product-info">
-                        <h4><a href="#">Product</a></h4>
+                        <h4><a href="#">Yoke (Brackets)</a></h4>
+                      <p>Precision component for joining shafts or machinery parts with rotational movement alignment.</p>  
                     </div>
                      <div class="hero-btn wow " data-wow-delay="0.4s">
                         <a href="#" class="btn-default"><span>See More</span></a>
@@ -450,23 +455,6 @@
                 </div>
             </div>
 
-            <div class="col-lg-3 col-md-6 mb-4">
-                <div class="custom-product-card fade-in">
-                    <div class="custom-product-img">
-                        <a href="#" data-cursor-text="View">
-                            <figure class="img-hover">
-                                <img src="images/products/8.png" alt="Indicator">
-                            </figure>
-                        </a>
-                    </div>
-                    <div class="custom-product-info">
-                        <h4><a href="#">digital height gauge</a></h4>
-                    </div>
-                     <div class="hero-btn wow " data-wow-delay="0.4s">
-                        <a href="#" class="btn-default"><span>See More</span></a>
-                      </div>
-                </div>
-            </div>
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="custom-product-card fade-in">
@@ -478,7 +466,8 @@
                         </a>
                     </div>
                     <div class="custom-product-info">
-                        <h4><a href="#">Product</a></h4>
+                        <h4><a href="#">Stem Clamp</a></h4>
+                        <p>Designed to hold the valve stem in place for reliable operation under high-pressure environments.</p>
                     </div>
                      <div class="hero-btn wow " data-wow-delay="0.4s">
                         <a href="#" class="btn-default"><span>See More</span></a>
@@ -497,7 +486,8 @@
                         </a>
                     </div>
                     <div class="custom-product-info">
-                        <h4><a href="#">Product </a></h4>
+                        <h4><a href="#">Adopters</a></h4>
+                        <p>Connector parts used to adapt or join different components together in industrial assemblies.</p>
                     </div>
                      <div class="hero-btn wow " data-wow-delay="0.4s">
                         <a href="#" class="btn-default"><span>See More</span></a>
@@ -515,7 +505,8 @@
                         </a>
                     </div>
                     <div class="custom-product-info">
-                        <h4><a href="#">Nuts</a></h4>
+                        <h4><a href="#">Adopters Shaft (Clamping)</a></h4>
+                        <p>Used for securing parts through clamping action — often in hydraulic or rotating systems.</p>
                     </div>
                      <div class="hero-btn wow " data-wow-delay="0.4s">
                         <a href="#" class="btn-default"><span>See More</span></a>
@@ -533,7 +524,8 @@
                         </a>
                     </div>
                     <div class="custom-product-info">
-                        <h4><a href="#">Pressure Regulator Plunger</a></h4>
+                        <h4><a href="#">Hand Wheel</a></h4>
+                        <p>Manual control element for regulating or actuating valves and other mechanical systems.</p>
                     </div>
                      <div class="hero-btn wow " data-wow-delay="0.4s">
                         <a href="#" class="btn-default"><span>See More</span></a>
@@ -552,6 +544,7 @@
                     </div>
                     <div class="custom-product-info">
                         <h4><a href="#">Spacer</a></h4>
+                        <p>Maintains a fixed distance between machine parts to ensure alignment and performance.</p>
                     </div>
                      <div class="hero-btn wow " data-wow-delay="0.4s">
                         <a href="#" class="btn-default"><span>See More</span></a>
@@ -568,7 +561,8 @@
                         </a>
                     </div>
                     <div class="custom-product-info">
-                        <h4><a href="#">Gasket</a></h4>
+                        <h4><a href="#">Gasket(Spam Guage)</a></h4>
+                        <p>Used to seal gaps between mating surfaces and prevent leakage under pressure or heat.</p>
                     </div>
                      <div class="hero-btn wow " data-wow-delay="0.4s">
                         <a href="#" class="btn-default"><span>See More</span></a>
@@ -585,7 +579,8 @@
                         </a>
                     </div>
                     <div class="custom-product-info">
-                        <h4><a href="#">Metal Disc</a></h4>
+                        <h4><a href="#">Metal Disc(Piston)</a></h4>
+                        <p>A durable piston component used for movement control in hydraulic and pneumatic cylinders.</p>
                     </div>
                      <div class="hero-btn wow " data-wow-delay="0.4s">
                         <a href="#" class="btn-default"><span>See More</span></a>
@@ -604,6 +599,7 @@
                     </div>
                     <div class="custom-product-info">
                         <h4><a href="#">lever</a></h4>
+                        <p>A mechanical arm component used for actuating movement or force transmission.</p>
                     </div>
                      <div class="hero-btn wow " data-wow-delay="0.4s">
                         <a href="#" class="btn-default"><span>See More</span></a>
@@ -621,7 +617,8 @@
                         </a>
                     </div>
                     <div class="custom-product-info">
-                        <h4><a href="#"> Swivel Adapter</a></h4>
+                        <h4><a href="#"> Swivel (Adapter Shaft)</a></h4>
+                        <p>Allows rotational movement while transmitting torque, often used in articulated systems.</p>
                     </div>
                      <div class="hero-btn wow " data-wow-delay="0.4s">
                         <a href="#" class="btn-default"><span>See More</span></a>
@@ -639,7 +636,8 @@
                         </a>
                     </div>
                     <div class="custom-product-info">
-                        <h4><a href="#">Product</a></h4>
+                        <h4><a href="#">Indicators</a></h4>
+                        <p>Visual or mechanical devices used for position or status indication in industrial systems.</p>
                     </div>
                      <div class="hero-btn wow " data-wow-delay="0.4s">
                         <a href="#" class="btn-default"><span>See More</span></a>
