--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-	<meta name="description" content="">
-	<meta name="keywords" content="">
+	<meta name="description" content="Vinnu Engineering Works specializes in high-precision machined components and custom-engineered solutions for fabricators, valve manufacturers, and various industrial sectors across India. Based in Bangalore, we deliver quality, reliability, and on-time production.">
+
+    <meta name="keywords" content="fabricators, valve manufacturers, precision machining, machined components, CNC machining, turned components, milling parts, industrial components, metal parts, custom fabrication, mechanical engineering, Bangalore engineering, OEM suppliers, flange manufacturers, adapter shafts, bushings, couplings, clamps, housings, CNC lathe parts, precision engineering, custom machine parts, engineering solutions, manufacturing solutions, industrial automation components, high-tolerance components, Indian manufacturers, ISO certified machining, machined metal parts, heavy machinery parts">
+
 	<meta name="author" content="Awaiken">
 	<!-- Page Title -->
     <title>Vinnu Engineering Works</title>
