--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <div class="hero-slide">
                     <!-- Slider Image Start -->
                     <div class="hero-slider-image">
-                        <img src="images/banner/1.jpg" alt="">
+                        <img src="images/gallery/10.jpeg" alt="">
                     </div>
                     <!-- Slider Image End -->
 
