--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
                 <div class="col-lg-3">
                     <div class="site-logo">
                         <a href="index.html">
-                     <!--<img src="images/logo.svg" alt="Logo">-->
-                     <h3>Vinnu Engineering Works</h3>
+                     <img src="/images/logo/logo.png" alt="Logo">
                         </a>
                     </div>
 					<!-- Logo End -->
@@ -107,8 +106,7 @@
 				<div class="container">
                     <!-- Logo Start -->
 					<a class="navbar-brand" href="index.html">
-			<!--<img src="images/footer-logo.svg" alt="Logo">-->
-            <h3>Vinnu Engineering Works</h3>
+			<img src="/images/logo/logo2.jpeg" alt="Logo">
 					</a>
 					<!-- Logo End -->
 
@@ -116,7 +114,7 @@
 					<div class="collapse navbar-collapse main-menu">
                         <div class="nav-menu-wrapper">
                             <ul class="navbar-nav mr-auto" id="menu">
-                                 <li class="nav-item"><a class="nav-link" href="#">Home</a></li>                            
+                                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>                            
                                 <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#">Products</a></li>
                                     <li class="nav-item submenu"><a class="nav-link" href="#">Industries We Serve</a>
