--- a/index.html
+++ b/index.html
@@ -650,6 +650,134 @@
 </div>
 <!-- Custom Products Section End -->
 
+<section class="machine-cards-section">
+  <h2 class="section-title">Machines What We Have</h2>
+
+  <div class="machine-cards-container">
+
+    <div class="machine-card"><p><strong>Sl. No:</strong> 01</p><p><strong>Name:</strong> CNC TURNING</p><p><strong>Code:</strong> VEW-01</p><p><strong>Make:</strong> JAGUAR</p><p><strong>Specification:</strong> DIA350 x 450MM</p></div>
+
+    <div class="machine-card"><p><strong>Sl. No:</strong> 02</p><p><strong>Name:</strong> CNC TURNING</p><p><strong>Code:</strong> VEW-02</p><p><strong>Make:</strong> ACE</p><p><strong>Specification:</strong> DIA 300 x 450MM</p></div>
+
+    <div class="machine-card"><p><strong>Sl. No:</strong> 03</p><p><strong>Name:</strong> CNC TURNING</p><p><strong>Code:</strong> VEW-03</p><p><strong>Make:</strong> LOKESH</p><p><strong>Specification:</strong> DIA 250 x 600MM</p></div>
+
+    <div class="machine-card"><p><strong>Sl. No:</strong> 04</p><p><strong>Name:</strong> CNC TURNING</p><p><strong>Code:</strong> VEW-04</p><p><strong>Make:</strong> ULTRA LYNX</p><p><strong>Specification:</strong> DIA 200 x 300 MM</p></div>
+
+    <div class="machine-card"><p><strong>Sl. No:</strong> 05</p><p><strong>Name:</strong> CNC MILLING</p><p><strong>Code:</strong> VEW-05</p><p><strong>Make:</strong> YAMARA</p><p><strong>Specification:</strong> 650X400 MM</p></div>
+
+    <div class="machine-card"><p><strong>Sl. No:</strong> 06</p><p><strong>Name:</strong> CNC MILLING</p><p><strong>Code:</strong> VEW-06</p><p><strong>Make:</strong> STM</p><p><strong>Specification:</strong> 1000X900X600 MM</p></div>
+
+    <div class="machine-card"><p><strong>Sl. No:</strong> 07</p><p><strong>Name:</strong> CNC MILLING</p><p><strong>Code:</strong> VEW-07</p><p><strong>Make:</strong> BFW</p><p><strong>Specification:</strong> 650X800X400 MM</p></div>
+
+    <div class="machine-card"><p><strong>Sl. No:</strong> 08</p><p><strong>Name:</strong> DRO</p><p><strong>Code:</strong> VEW-08</p><p><strong>Make:</strong> S&T ENGINEERING</p><p><strong>Specification:</strong> 750X350X350 MM</p></div>
+
+    <div class="machine-card"><p><strong>Sl. No:</strong> 09</p><p><strong>Name:</strong> DRO</p><p><strong>Code:</strong> VEW-09</p><p><strong>Make:</strong> S&T ENGINEERING</p><p><strong>Specification:</strong> 750X350X300 MM</p></div>
+
+    <div class="machine-card"><p><strong>Sl. No:</strong> 10</p><p><strong>Name:</strong> HORIZONTAL MILLING</p><p><strong>Code:</strong> VEW-10</p><p><strong>Make:</strong> HMT</p><p><strong>Specification:</strong> 700X250X250 MM</p></div>
+
+    <div class="machine-card"><p><strong>Sl. No:</strong> 11</p><p><strong>Name:</strong> SURFACE GRINDING</p><p><strong>Code:</strong> VEW-11</p><p><strong>Make:</strong> JONES HIPMAN</p><p><strong>Specification:</strong> 150X300 MM</p></div>
+
+    <div class="machine-card"><p><strong>Sl. No:</strong> 12</p><p><strong>Name:</strong> ARC WELDING</p><p><strong>Code:</strong> VEW-12</p><p><strong>Make:</strong> ESAB</p><p><strong>Specification:</strong> —</p></div>
+
+    <div class="machine-card"><p><strong>Sl. No:</strong> 13</p><p><strong>Name:</strong> DIG WELDING</p><p><strong>Code:</strong> VEW-13</p><p><strong>Make:</strong> ESAB</p><p><strong>Specification:</strong> —</p></div>
+
+    <div class="machine-card"><p><strong>Sl. No:</strong> 14</p><p><strong>Name:</strong> CO2 WELDING</p><p><strong>Code:</strong> VEW-14</p><p><strong>Make:</strong> ESAB</p><p><strong>Specification:</strong> 400A</p></div>
+
+    <div class="machine-card"><p><strong>Sl. No:</strong> 15</p><p><strong>Name:</strong> CONVENTIONAL LATHE</p><p><strong>Code:</strong> VEW-11</p><p><strong>Make:</strong> VINOD</p><p><strong>Specification:</strong> 650X100 MM</p></div>
+
+    <div class="machine-card"><p><strong>Sl. No:</strong> 16</p><p><strong>Name:</strong> CONVENTIONAL LATHE</p><p><strong>Code:</strong> VEW-12</p><p><strong>Make:</strong> TURNOKING</p><p><strong>Specification:</strong> 600X300 MM</p></div>
+
+    <div class="machine-card"><p><strong>Sl. No:</strong> 17</p><p><strong>Name:</strong> CONVENTIONAL LATHE</p><p><strong>Code:</strong> VEW-13</p><p><strong>Make:</strong> RADHIKA</p><p><strong>Specification:</strong> 2”X350X600 MM</p></div>
+
+    <div class="machine-card"><p><strong>Sl. No:</strong> 18</p><p><strong>Name:</strong> CONVENTIONAL LATHE</p><p><strong>Code:</strong> VEW-14</p><p><strong>Make:</strong> BALAJI</p><p><strong>Specification:</strong> 2”X250 MM</p></div>
+
+    <div class="machine-card"><p><strong>Sl. No:</strong> 19</p><p><strong>Name:</strong> CONVENTIONAL LATHE</p><p><strong>Code:</strong> VEW-15</p><p><strong>Make:</strong> SABARI</p><p><strong>Specification:</strong> 2.25X500 MM</p></div>
+
+    <div class="machine-card"><p><strong>Sl. No:</strong> 20</p><p><strong>Name:</strong> CONVENTIONAL LATHE</p><p><strong>Code:</strong> VEW-16</p><p><strong>Make:</strong> SABARI</p><p><strong>Specification:</strong> 1800X300 MM</p></div>
+
+    <div class="machine-card"><p><strong>Sl. No:</strong> 21</p><p><strong>Name:</strong> CUTTING MACHINE</p><p><strong>Code:</strong> VEW-17</p><p><strong>Make:</strong> TOS CELAKOVICE</p><p><strong>Specification:</strong> 3”X750 MM</p></div>
+
+    <div class="machine-card"><p><strong>Sl. No:</strong> 22</p><p><strong>Name:</strong> CUTTING MACHINE</p><p><strong>Code:</strong> VEW-18</p><p><strong>Make:</strong> BANSA</p><p><strong>Specification:</strong> 280X280 MM</p></div>
+
+    <div class="machine-card"><p><strong>Sl. No:</strong> 23</p><p><strong>Name:</strong> DRILLING MACHINE</p><p><strong>Code:</strong> VEW-19</p><p><strong>Make:</strong> EIFCO</p><p><strong>Specification:</strong> DEPTH 450 MM</p></div>
+
+    <div class="machine-card"><p><strong>Sl. No:</strong> 24</p><p><strong>Name:</strong> DRILLING MACHINE</p><p><strong>Code:</strong> VEW-20</p><p><strong>Make:</strong> EIFCO</p><p><strong>Specification:</strong> DEPTH 800 MM</p></div>
+
+    <div class="machine-card"><p><strong>Sl. No:</strong> 25</p><p><strong>Name:</strong> BENCH GRINDING</p><p><strong>Code:</strong> VEW-21</p><p><strong>Make:</strong> MOTORIGEO</p><p><strong>Specification:</strong> 1½”</p></div>
+
+    <div class="machine-card"><p><strong>Sl. No:</strong> 26</p><p><strong>Name:</strong> ANGULAR GRINDER</p><p><strong>Code:</strong> VEW-26</p><p><strong>Make:</strong> HITACHI</p><p><strong>Specification:</strong> AG-7</p></div>
+
+  </div>
+</section>
+ <section class="machine-section">
+  <h2 class="section-title">Machines What We Have</h2>
+
+  <div class="table-wrapper">
+    <table class="machine-table">
+      <thead>
+        <tr>
+          <th>Sl. No</th>
+          <th>Name of the Machine Equipment</th>
+          <th>Unique Code</th>
+          <th>Make</th>
+          <th>Specification</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr><td>01</td><td>CNC TURNING</td><td>VEW-01</td><td>JAGUAR</td><td>DIA350 x 450MM</td></tr>
+        <tr><td>02</td><td>CNC TURNING</td><td>VEW-02</td><td>ACE</td><td>DIA 300 x 450MM</td></tr>
+        <tr><td>03</td><td>CNC TURNING</td><td>VEW-03</td><td>LOKESH</td><td>DIA 250 x 600MM</td></tr>
+        <tr><td>04</td><td>CNC TURNING</td><td>VEW-04</td><td>ULTRA LYNX</td><td>DIA 200 x 300 MM</td></tr>
+        <tr><td>05</td><td>CNC MILLING</td><td>VEW-05</td><td>YAMARA</td><td>650X400 MM</td></tr>
+        <tr><td>06</td><td>CNC MILLING</td><td>VEW-06</td><td>STM</td><td>1000X900X600 MM</td></tr>
+        <tr><td>07</td><td>CNC MILLING</td><td>VEW-07</td><td>BFW</td><td>650X800X400 MM</td></tr>
+        <tr><td>08</td><td>DRO</td><td>VEW-08</td><td>S&T ENGINEERING</td><td>750X350X350 MM</td></tr>
+        <tr><td>09</td><td>DRO</td><td>VEW-09</td><td>S&T ENGINEERING</td><td>750X350X300 MM</td></tr>
+        <tr><td>10</td><td>HORIZONTAL MILLING</td><td>VEW-10</td><td>HMT</td><td>700X250X250 MM</td></tr>
+        <tr><td>11</td><td>SURFACE GRINDING</td><td>VEW-11</td><td>JONES HIPMAN</td><td>150X300 MM</td></tr>
+        <tr><td>12</td><td>ARC WELDING</td><td>VEW-12</td><td>ESAB</td><td>—</td></tr>
+        <tr><td>13</td><td>DIG WELDING</td><td>VEW-13</td><td>ESAB</td><td>—</td></tr>
+        <tr><td>14</td><td>CO2 WELDING</td><td>VEW-14</td><td>ESAB</td><td>400A</td></tr>
+        <tr><td>15</td><td>CONVENTIONAL LATHE</td><td>VEW-11</td><td>VINOD</td><td>650X100 MM</td></tr>
+        <tr><td>16</td><td>CONVENTIONAL LATHE</td><td>VEW-12</td><td>TURNOKING</td><td>600X300 MM</td></tr>
+        <tr><td>17</td><td>CONVENTIONAL LATHE</td><td>VEW-13</td><td>RADHIKA</td><td>2”X350X600 MM</td></tr>
+        <tr><td>18</td><td>CONVENTIONAL LATHE</td><td>VEW-14</td><td>BALAJI</td><td>2”X250 MM</td></tr>
+        <tr><td>19</td><td>CONVENTIONAL LATHE</td><td>VEW-15</td><td>SABARI</td><td>2.25X500 MM</td></tr>
+        <tr><td>20</td><td>CONVENTIONAL LATHE</td><td>VEW-16</td><td>SABARI</td><td>1800X300 MM</td></tr>
+        <tr><td>21</td><td>CUTTING MACHINE</td><td>VEW-17</td><td>TOS CELAKOVICE</td><td>3”X750 MM</td></tr>
+        <tr><td>22</td><td>CUTTING MACHINE</td><td>VEW-18</td><td>BANSA</td><td>280X280 MM</td></tr>
+        <tr><td>23</td><td>DRILLING MACHINE</td><td>VEW-19</td><td>EIFCO</td><td>DEPTH 450 MM</td></tr>
+        <tr><td>24</td><td>DRILLING MACHINE</td><td>VEW-20</td><td>EIFCO</td><td>DEPTH 800 MM</td></tr>
+        <tr><td>25</td><td>BENCH GRINDING</td><td>VEW-21</td><td>MOTORIGEO</td><td>1½”</td></tr>
+        <tr><td>26</td><td>ANGULAR GRINDER</td><td>VEW-26</td><td>HITACHI</td><td>AG-7</td></tr>
+      </tbody>
+    </table>
+  </div>
+</section>
+
+<!-- Types of Materials Section -->
+<section class="materials-section">
+  <h2 class="section-title">Types of Materials We Use</h2>
+  <ul class="materials-list">
+    <li>EN-19 GRADE</li>
+    <li>EN-8 GRADE</li>
+    <li>GR-47</li>
+    <li>GR-70</li>
+    <li>COPPER</li>
+    <li>GR-45</li>
+    <li>MILD STEEL</li>
+    <li>MILD STEEL CASTING</li>
+    <li>316 STAINLESS STEEL</li>
+    <li>304 STAINLESS STEEL</li>
+    <li>202 STAINLESS STEEL</li>
+    <li>STAINLESS STEEL CASTING</li>
+    <li>ALUMINIUM</li>
+    <li>BRASS</li>
+    <li>ALLOY</li>
+  </ul>
+</section>
+
+
    <!-- Our Service Start -->
 <div class="our-services parallaxie" >
     <div class="container">
