--- a/index.html
+++ b/index.html
@@ -363,17 +363,17 @@
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="custom-product-card fade-in">
                     <div class="custom-product-img">
-                        <a href="#" data-cursor-text="View">
+                        <a href="steeringknuckle.html" data-cursor-text="View">
                             <figure class="img-hover">
                                 <img src="images/products/1.png" alt="Adapter Chaft">
                             </figure>
                         </a>
                     </div>
                     <div class="custom-product-info">
-                        <h4><a href="#">Steering Knuckle</a></h4>
+                        <h4><a href="steeringknuckle.html">Steering Knuckle</a></h4>
                     </div>
                       <div class="hero-btn wow " data-wow-delay="0.4s">
-                        <a href="#" class="btn-default"><span>See More</span></a>
+                        <a href="steeringknuckle.html" class="btn-default"><span>See More</span></a>
                       </div>
                 </div>
             </div>
@@ -381,17 +381,17 @@
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="custom-product-card fade-in">
                     <div class="custom-product-img">
-                        <a href="#" data-cursor-text="View">
+                        <a href="steeringknuckle.html" data-cursor-text="View">
                             <figure class="img-hover">
                                 <img src="images/products/2.png" alt="Piston">
                             </figure>
                         </a>
                     </div>
                     <div class="custom-product-info">
-                        <h4><a href="#">Steering Knuckle</a></h4>
+                        <h4><a href="steeringknuckle.html">Steering Knuckle</a></h4>
                     </div>
                      <div class="hero-btn wow " data-wow-delay="0.4s">
-                        <a href="#" class="btn-default"><span>See More</span></a>
+                        <a href="steeringknuckle.html" class="btn-default"><span>See More</span></a>
                       </div>
                 </div>
             </div>
@@ -399,17 +399,17 @@
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="custom-product-card fade-in">
                     <div class="custom-product-img">
-                        <a href="#" data-cursor-text="View">
+                        <a href="crankshaftrearoil.html" data-cursor-text="View">
                             <figure class="img-hover">
                                 <img src="images/products/3.png" alt="End Cap">
                             </figure>
                         </a>
                     </div>
                     <div class="custom-product-info">
-                        <h4><a href="#">Crankshaft Rear Oil <br> Seal Housing</a></h4>
+                        <h4><a href="crankshaftrearoil.html">Crankshaft Rear Oil <br> Seal Housing</a></h4>
                     </div>
                      <div class="hero-btn wow " data-wow-delay="0.4s">
-                        <a href="#" class="btn-default"><span>See More</span></a>
+                        <a href="crankshaftrearoil.html" class="btn-default"><span>See More</span></a>
                       </div>
                 </div>
             </div>
@@ -417,17 +417,17 @@
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="custom-product-card fade-in">
                     <div class="custom-product-img">
-                        <a href="#" data-cursor-text="View">
+                        <a href="glandflange.html" data-cursor-text="View">
                             <figure class="img-hover">
                                 <img src="images/products/Gland flange.png" alt="Gland Flange">
                             </figure>
                         </a>
                     </div>
                     <div class="custom-product-info">
-                        <h4><a href="#">Gland Flange</a></h4>
+                        <h4><a href="glandflange.html">Gland Flange</a></h4>
                     </div>
                      <div class="hero-btn wow " data-wow-delay="0.4s">
-                        <a href="#" class="btn-default"><span>See More</span></a>
+                        <a href="glandflange.html" class="btn-default"><span>See More</span></a>
                       </div>
                 </div>
             </div>
