--- a/index.html
+++ b/index.html
@@ -435,17 +435,17 @@
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="custom-product-card fade-in">
                     <div class="custom-product-img">
-                        <a href="#" data-cursor-text="View">
+                        <a href="yoke.html" data-cursor-text="View">
                             <figure class="img-hover">
                                 <img src="images/products/4.png" alt="Spacer">
                             </figure>
                         </a>
                     </div>
                     <div class="custom-product-info">
-                        <h4><a href="#">Yoke (Brackets)</a></h4>
+                        <h4><a href="yoke.html">Yoke (Brackets)</a></h4>
                     </div>
                      <div class="hero-btn wow " data-wow-delay="0.4s">
-                        <a href="#" class="btn-default"><span>See More</span></a>
+                        <a href="yoke.html" class="btn-default"><span>See More</span></a>
                       </div>
                 </div>
             </div>
@@ -454,17 +454,17 @@
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="custom-product-card fade-in">
                     <div class="custom-product-img">
-                        <a href="#" data-cursor-text="View">
+                        <a href="stemclamp.html" data-cursor-text="View">
                             <figure class="img-hover">
                                 <img src="images/products/6.png" alt="Yoke">
                             </figure>
                         </a>
                     </div>
                     <div class="custom-product-info">
-                        <h4><a href="#">Stem Clamp</a></h4>
+                        <h4><a href="stemclamp.html">Stem Clamp</a></h4>
                     </div>
                      <div class="hero-btn wow " data-wow-delay="0.4s">
-                        <a href="#" class="btn-default"><span>See More</span></a>
+                        <a href="stemclamp.html" class="btn-default"><span>See More</span></a>
                       </div>
                 </div>
             </div>
