--- a/stemclamp.html
+++ b/stemclamp.html
@@ -165,7 +165,7 @@
                             <ol class="breadcrumb">
 								<li class="breadcrumb-item"><a href="index.html">home</a></li>
 								<li class="breadcrumb-item"><a href="#">Product</a></li>
-								<li class="breadcrumb-item active" aria-current="page">Gland Flange</li>
+								<li class="breadcrumb-item active" aria-current="page">Crankshaft Rear Oil Seal Housing</li>
 							</ol>
 						</nav>
 					</div>
@@ -176,148 +176,6 @@
 	</div>
 	<!-- Page Header End -->
 
-<!-- Page Service Single Start -->
-<div class="page-service-single">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8">
-                <!-- Service Single Content Start -->
-                <div class="service-single-content">
-                    <!-- Service Featured Image Start -->
-                    <div class="service-featured-image">
-                        <figure class="image-anime reveal">
-                            <img src="images/products/Gland flange.png" alt="Gland Flange">
-                        </figure>
-                    </div>
-                    <!-- Service Featured Image End -->
-
-                    <!-- Service Entry Start -->
-                    <div class="service-entry">
-                        <p class="wow fadeInUp">The <strong>Gland Flange</strong> is a key mechanical component used to secure and seal the ends of pipes, valves, and rotating equipment, especially in high-pressure environments. At Vinnu Engineering Works, our gland flanges are engineered with precision for durable, leak-proof performance in demanding industrial settings.</p>
-
-                        <p class="wow fadeInUp" data-wow-delay="0.2s">Manufactured using premium-grade materials such as carbon steel, stainless steel, or alloy steel, each flange is CNC-machined to meet strict dimensional tolerances. We support both standard and custom designs to ensure compatibility with various sealing systems and operating pressures.</p>
-
-                        <h2 class="wow fadeInUp" data-wow-delay="0.4s">Applications of <span>Gland Flange</span></h2>
-                        <p class="wow fadeInUp" data-wow-delay="0.2s">Our Gland Flanges are widely used in:</p>
-                        <ul>
-                            <li>Oil & Gas Pipelines</li>
-                            <li>Chemical & Petrochemical Plants</li>
-                            <li>Power Generation Units</li>
-                            <li>Hydraulic and Pneumatic Systems</li>
-                        </ul>
-
-                        <h2 class="wow fadeInUp" data-wow-delay="0.4s">Features & <span>Advantages</span></h2>
-                        <ul>
-                            <li>Leak-proof and pressure-tested construction</li>
-                            <li>Corrosion and temperature resistant</li>
-                            <li>Suitable for static and rotating assemblies</li>
-                            <li>Precision-drilled bolt holes and smooth surfaces</li>
-                            <li>Available in ANSI, DIN, or custom standards</li>
-                        </ul>
-                    </div>
-
-                    <!-- Our FAQ Section Start -->
-                    <div class="our-faq-section">
-                        <!-- Section Title Start -->
-                        <div class="section-title">
-                            <h2 class="text-anime-style-3" data-cursor="-opaque">Frequently asked <span>questions</span></h2>
-                        </div>
-                        <!-- Section Title End -->
-
-                        <!-- FAQ Accordion Start -->
-                        <div class="faq-accordion" id="faqaccordion">
-                            <!-- FAQ Item Start -->
-                            <div class="accordion-item wow fadeInUp">
-                                <h2 class="accordion-header" id="heading1">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
-                                        What materials are available for your gland flanges?
-                                    </button>
-                                </h2>
-                                <div id="collapse1" class="accordion-collapse collapse" aria-labelledby="heading1" data-bs-parent="#faqaccordion">
-                                    <div class="accordion-body">
-                                        <p>We offer gland flanges in carbon steel, stainless steel (304/316), and alloy steel options to suit different applications and environments.</p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!-- FAQ Item Start -->
-                            <div class="accordion-item wow fadeInUp" data-wow-delay="0.2s">
-                                <h2 class="accordion-header" id="heading2">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
-                                        Can I order custom sizes or bolt patterns?
-                                    </button>
-                                </h2>
-                                <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2" data-bs-parent="#faqaccordion">
-                                    <div class="accordion-body">
-                                        <p>Yes, we can customize flange dimensions, bolt hole layouts, and thicknesses based on client drawings or specific technical needs.</p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!-- FAQ Item Start -->
-                            <div class="accordion-item wow fadeInUp" data-wow-delay="0.4s">
-                                <h2 class="accordion-header" id="heading3">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
-                                        Are these suitable for high-pressure applications?
-                                    </button>
-                                </h2>
-                                <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading3" data-bs-parent="#faqaccordion">
-                                    <div class="accordion-body">
-                                        <p>Absolutely. Our gland flanges are tested to perform under high-pressure and high-temperature environments, ensuring reliable operation.</p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!-- FAQ Item Start -->
-                            <div class="accordion-item wow fadeInUp" data-wow-delay="0.6s">
-                                <h2 class="accordion-header" id="heading4">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
-                                        What surface treatments are provided?
-                                    </button>
-                                </h2>
-                                <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4" data-bs-parent="#faqaccordion">
-                                    <div class="accordion-body">
-                                        <p>We offer anti-rust coatings, galvanizing, anodizing, and other surface finishes depending on the application and environmental exposure.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- FAQ Accordion End -->
-                    </div>
-                    <!-- Our FAQ Section End -->
-                </div>
-            </div>
-
-            <div class="col-lg-4 pt-4">
-                <!-- Service Sidebar Start -->
-                <div class="service-sidebar">
-                    <!-- Service Category List Start -->
-                    <div class="service-catagery-list wow fadeInUp">
-                        <h3>Products</h3>
-                        <ul>
-                            <li><a href="#">Crankshaft Rear Oil Seal Housing</a></li>
-                            <li><a href="#">Gland Flange</a></li>
-                            <li><a href="#">Yoke (Brackets)</a></li>
-                            <li><a href="#">Stem Clamp</a></li>
-                            <li><a href="#">Adopters</a></li>
-                            <li><a href="#">Adopters Shaft (Clamping)</a></li>
-                            <li><a href="#">Hand Wheel</a></li>
-                            <li><a href="#">Spacer</a></li>
-                            <li><a href="#">Gasket(Spam Guage)</a></li>
-                            <li><a href="#">Metal Disc(Piston)</a></li>
-                            <li><a href="#">lever</a></li>
-                            <li><a href="#">Swivel (Adapter Shaft)</a></li>
-                            <li><a href="#">Indicators</a></li>
-                        </ul>
-                    </div>
-                    <!-- Service Category List End -->
-                </div>
-                <!-- Service Sidebar End -->
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Page Service Single End -->
 
 
     
