--- a/yoke.html
+++ b/yoke.html
@@ -165,7 +165,7 @@
                             <ol class="breadcrumb">
 								<li class="breadcrumb-item"><a href="index.html">home</a></li>
 								<li class="breadcrumb-item"><a href="#">Product</a></li>
-								<li class="breadcrumb-item active" aria-current="page">Gland Flange</li>
+								<li class="breadcrumb-item active" aria-current="page">Yoke (Brackets)</li>
 							</ol>
 						</nav>
 					</div>
@@ -186,33 +186,37 @@
                     <!-- Service Featured Image Start -->
                     <div class="service-featured-image">
                         <figure class="image-anime reveal">
-                            <img src="images/products/Gland flange.png" alt="Gland Flange">
+                            <img src="images/products/4.png" alt="Yoke (Brackets)">
                         </figure>
                     </div>
                     <!-- Service Featured Image End -->
 
                     <!-- Service Entry Start -->
                     <div class="service-entry">
-                        <p class="wow fadeInUp">The <strong>Gland Flange</strong> is a key mechanical component used to secure and seal the ends of pipes, valves, and rotating equipment, especially in high-pressure environments. At Vinnu Engineering Works, our gland flanges are engineered with precision for durable, leak-proof performance in demanding industrial settings.</p>
+                        <p class="wow fadeInUp">
+                            The <strong>Yoke (Brackets)</strong> is an essential mechanical linkage component used to connect actuators, spindles, and other moving parts within industrial, automotive, and valve assemblies. At Vinnu Engineering Works, we manufacture high-strength yokes with outstanding load-bearing capabilities and precise dimensional tolerances.
+                        </p>
 
-                        <p class="wow fadeInUp" data-wow-delay="0.2s">Manufactured using premium-grade materials such as carbon steel, stainless steel, or alloy steel, each flange is CNC-machined to meet strict dimensional tolerances. We support both standard and custom designs to ensure compatibility with various sealing systems and operating pressures.</p>
+                        <p class="wow fadeInUp" data-wow-delay="0.2s">
+                            Produced using advanced CNC machining and strict quality controls, our yokes are available in mild steel, stainless steel, and alloy steel depending on the mechanical application. Each piece is customized or made to exact drawings for compatibility with specific mounting and motion requirements.
+                        </p>
 
-                        <h2 class="wow fadeInUp" data-wow-delay="0.4s">Applications of <span>Gland Flange</span></h2>
-                        <p class="wow fadeInUp" data-wow-delay="0.2s">Our Gland Flanges are widely used in:</p>
+                        <h2 class="wow fadeInUp" data-wow-delay="0.4s">Applications of <span>Yoke (Brackets)</span></h2>
+                        <p class="wow fadeInUp" data-wow-delay="0.2s">Our Yoke components are widely used in:</p>
                         <ul>
-                            <li>Oil & Gas Pipelines</li>
-                            <li>Chemical & Petrochemical Plants</li>
-                            <li>Power Generation Units</li>
-                            <li>Hydraulic and Pneumatic Systems</li>
+                            <li>Valve Automation Assemblies</li>
+                            <li>Actuator Mechanisms</li>
+                            <li>Automotive Steering and Suspension Systems</li>
+                            <li>Industrial Machinery and Linkages</li>
                         </ul>
 
                         <h2 class="wow fadeInUp" data-wow-delay="0.4s">Features & <span>Advantages</span></h2>
                         <ul>
-                            <li>Leak-proof and pressure-tested construction</li>
-                            <li>Corrosion and temperature resistant</li>
-                            <li>Suitable for static and rotating assemblies</li>
-                            <li>Precision-drilled bolt holes and smooth surfaces</li>
-                            <li>Available in ANSI, DIN, or custom standards</li>
+                            <li>Robust structure with high tensile strength</li>
+                            <li>Precision hole alignments for easy assembly</li>
+                            <li>Available with or without bushings or slots</li>
+                            <li>Machined finish with optional surface treatments</li>
+                            <li>Available in custom designs and materials</li>
                         </ul>
                     </div>
 
@@ -230,12 +234,12 @@
                             <div class="accordion-item wow fadeInUp">
                                 <h2 class="accordion-header" id="heading1">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
-                                        What materials are available for your gland flanges?
+                                        What materials are used in your yoke components?
                                     </button>
                                 </h2>
                                 <div id="collapse1" class="accordion-collapse collapse" aria-labelledby="heading1" data-bs-parent="#faqaccordion">
                                     <div class="accordion-body">
-                                        <p>We offer gland flanges in carbon steel, stainless steel (304/316), and alloy steel options to suit different applications and environments.</p>
+                                        <p>We use mild steel, stainless steel (304/316), and alloy steel based on application needs and strength requirements.</p>
                                     </div>
                                 </div>
                             </div>
@@ -244,12 +248,12 @@
                             <div class="accordion-item wow fadeInUp" data-wow-delay="0.2s">
                                 <h2 class="accordion-header" id="heading2">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
-                                        Can I order custom sizes or bolt patterns?
+                                        Do you provide yokes with bushing or slot features?
                                     </button>
                                 </h2>
                                 <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2" data-bs-parent="#faqaccordion">
                                     <div class="accordion-body">
-                                        <p>Yes, we can customize flange dimensions, bolt hole layouts, and thicknesses based on client drawings or specific technical needs.</p>
+                                        <p>Yes, we can machine yokes with internal bushings, elongated slots, or through holes as per customer drawings or functional requirements.</p>
                                     </div>
                                 </div>
                             </div>
@@ -258,12 +262,12 @@
                             <div class="accordion-item wow fadeInUp" data-wow-delay="0.4s">
                                 <h2 class="accordion-header" id="heading3">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
-                                        Are these suitable for high-pressure applications?
+                                        Are custom designs and sizes supported?
                                     </button>
                                 </h2>
                                 <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading3" data-bs-parent="#faqaccordion">
                                     <div class="accordion-body">
-                                        <p>Absolutely. Our gland flanges are tested to perform under high-pressure and high-temperature environments, ensuring reliable operation.</p>
+                                        <p>Yes, we specialize in precision custom fabrication of yokes based on customer drawings, 3D models, or application specs.</p>
                                     </div>
                                 </div>
                             </div>
@@ -272,12 +276,12 @@
                             <div class="accordion-item wow fadeInUp" data-wow-delay="0.6s">
                                 <h2 class="accordion-header" id="heading4">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
-                                        What surface treatments are provided?
+                                        What finishes do you offer on the final yokes?
                                     </button>
                                 </h2>
                                 <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4" data-bs-parent="#faqaccordion">
                                     <div class="accordion-body">
-                                        <p>We offer anti-rust coatings, galvanizing, anodizing, and other surface finishes depending on the application and environmental exposure.</p>
+                                        <p>We provide shot blasting, powder coating, galvanizing, or plain machined finishes depending on the usage and exposure conditions.</p>
                                     </div>
                                 </div>
                             </div>
@@ -305,7 +309,7 @@
                             <li><a href="#">Spacer</a></li>
                             <li><a href="#">Gasket(Spam Guage)</a></li>
                             <li><a href="#">Metal Disc(Piston)</a></li>
-                            <li><a href="#">lever</a></li>
+                            <li><a href="#">Lever</a></li>
                             <li><a href="#">Swivel (Adapter Shaft)</a></li>
                             <li><a href="#">Indicators</a></li>
                         </ul>
